<resources>
    <string name="app_name">GDZC</string>
    <string name="action_right">功能</string>
    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="forget">忘记密码</string>
    <string name="remember">记住密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_text">注册账号</string>

    <string name="main_sbdj">设备登记</string>
    <string name="main_sbsh">设备审核</string>
    <string name="main_zmxg">账目修改</string>
    <string name="main_zccx">资产查询</string>
    <string name="main_txfx">图形分析</string>
    <string name="main_zcbg">资产变更</string>

    <string name="error_login">用户名或密码错误</string>
    <string name="empty_username">用户名不能为空</string>
    <string name="empty_password">密码不能为空</string>

    <string name="success_save">保存成功</string>

    <string name="sbdj_dwmc">单位名称：</string>
    <string name="sbdj_dwjc">单位简称：</string>
    <string name="sbdj_dwjm">单位简码：</string>

    <string name="flh_search">请输入分类名称、分类号</string>

</resources>
